# ai-meeting-copilot

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  index.html  pyproject.toml
examples/: advanced.py  basic.py
src/: __init__.py  __main__.py  action_extractor.py  api.py  calendar_integration.py  core.py  follow_up_generator.py  health.py  meetingcopilot.py  summarizer.py  transcriber.py  utils.py
tests/: test_api.py  test_basic.py  test_benchmark.py  test_core.py  test_integration.py  test_meetingcopilot.py
